# fato-relevante

./: .gitignore  COMANDOS.txt  README.md  ROADMAP.md  atualizar_e_ler.bat  gerar_exe.bat  ler_relatorios.bat  lote_mensal.bat  pyproject.toml
.github/workflows/: site.yml
dados/: classificacao_etfs.csv  taxas_etfs.csv
docs/: ACOES.md  ETFS.md  FONTES.md  INSTALACAO.md  VISAO.md
leituras/: 045A11.json  0EBI11.json  0NFY11.json  0PI511.json  0QCK11.json  3PRE11.json  5PRE11.json  AALR3.json  ABCB4.json  ABTC11.json  ACWI11.json  AERI3.json  AERO11.json  AFHI11.json  AFLT3.json  AGRI11.json  AGRO3.json  AGXY3.json  AHEB3.json  ALLD3.json  ALMI11.json  ALPA3.json  ALPK3.json  ALUG11.json  ALUP11.json  AMAR3.json  AMBP3.json  AMER11.json  AMOB3.json  ANCR11.json  APTO11.json  APXR11.json  APXU11.json  AREA11.json  ARGE11.json  ARML3.json  ARND3.json  AROA11.json  ARRI11.json  ARTE11.json  (+778 more)
src/fato_relevante/: analise.py  armazenamento.py  cli.py  formato.py  ia.py  (+2 more)
tests/: conftest.py  test_acao_flags.py  test_acoes_site.py  test_administrador.py  test_apoio_e_tooltips.py  test_banco_site.py  test_botao_reportar.py  test_calculadoras_js.py  test_coleta_analise.py  test_cotacoes.py  test_empresas.py  test_etfs.py  test_fnet_ia.py  test_fre.py  test_fundamentos.py  test_gordon.py  test_indices_rentabilidade.py  test_interativo.py  test_ipe.py  test_parecer.py  test_posicoes_fof.py  test_precos.py  test_ranking.py  test_reclassificacao.py  test_redflags.py  test_relatorio_html.py  test_relatorio_terminal.py  test_site.py  test_taxa.py  test_taxas_etf.py  test_trimestral.py
(+61 files in other folders)
