[project]
name = "scout"
version = "0.1.0"
description = "Scout — conhecimento antes da decisão. Reconhecimento de ativos da bolsa com dados oficiais e IA local."
readme = "README.md"
license = "MIT"
authors = [{ name = "Ruamms", email = "ruamms3@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "qrcode>=7.4",
    "pypdf>=5.0",
    "pymupdf>=1.24",
    "cryptography>=49.0.0",
]

[project.urls]
Repository = "https://github.com/Ruamms/scout"

[project.scripts]
scout = "scout.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pyinstaller>=6.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scout"]
